configure Firebase and wire up retrieval

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "firebase": "^5.0.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
