--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Quasar / Vue reference app that connects to Firebase.",
   "productName": "Quasar with Firebase Example",
   "cordovaId": "org.cordova.quasar.app",
-  "author": "Steve Clarke <steve@sevenview.ca>",
+  "author": "wizardev2019",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
